fix(past-time-picker): visible change &  disabled style

--- a/src/static-date-picker/style/index.less
+++ b/src/static-date-picker/style/index.less
@@ -184,8 +184,8 @@
     }
 
     &-disabled {
+      color: @gray-3;
       cursor: not-allowed;
-      pointer-events: none;
 
       &::before {
         background: @palette-gray-1;
